@@ -21,6 +21,7 @@ Contributors:
 	Hannes Weisbach
 	Doug Springer
 	Brett Hagman <bhagman@roguerobotics.com>
+	Rene Liebscher <r.liebscher@gmx.de>
 
 For minor contributions, please see the ChangeLog files.
 
